*
* 2.0
*

- Template import correctly handles updates for existing templates
- Scripts can be used as instance source in instance discovery DCIs
- NXSL node object attribute snmpSysDescription renamed back to sysDescription
- Selectors in NXSL
- Array attributes in NXSL: size, minIndex, maxIndex
- Hash map attributes in NXSL: size
- Subnet mask for synthetic subnets can be set in server configuration
- Added cumulative counters for server DB writer requests
- Fixed data corruption issues in ODBC and Oracle DB drivers
- Additional internal server metrics for monitoring DB activity and performance
- Added interface creation hook
- Improved System.InstalledProducts table handling on Windows
- Fixed inefficient query in Oracle monitoring subagent
- Server shutdown speed improved
- Faster SNMP probing during configuration polls
- Fixed false negative in node down detection if expected state of some interfaces set to IGNORE
- Agent SNMP proxy improved
- Improved agent data cache reconciliation
- Fixed Oracle 12c compatibility issues
- Automatic configuration import from templates directory on server startup
- Management console:
	- Object tool input fields can be rearranged
	- Line width can be configured for line charts on dashboards
	- Column sizes saved in table DCI last values view
	- Rack height and numbering direction can be changed
- Android Console:
	- Refactoring of Alarms configuration section: alarm notification events fully customizable, added notify by vibration (SOS pattern) and by LED color (set to black to disable a specific category)
	- Added action buttons in status bar for notification icon (reconect, disconnect and exit), only for Android version starting from v4.1
	- Updated support library
- Android Agent:
	- Support for Marshmallow devices (v6.0)
	- Updated support library